actualizacion de Json

--- a/generador-titulos-virales/package.json
+++ b/generador-titulos-virales/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-fullstack-serie",
+  "name": "generador-titulos-virales",
   "version": "0.1.0",
   "private": true,
   "scripts": {
