Enable clean slate deploy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,7 @@ jobs:
           protocol: ftp
           local-dir: ./
           server-dir: public_html/
+          dangerous-clean-slate: true
           exclude: |
             **/.git*
             **/.github/**
