--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
           port: 21
           protocol: ftp
           local-dir: ./
-          server-dir: public_html/
+          server-dir: ./
           dangerous-clean-slate: true
           exclude: |
             **/.git*
